style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');



* {
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
}

div#gorro{
    display: flex;
    gap: 0.7rem;
}

nav p{
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 600;
    font-size: 1.2rem;
    padding-top: 0.3rem;
}

nav{
    display: flex;
    justify-content: space-around;
    background-color: #F7C7B9;
    gap: 28rem;
    padding: 0.6rem;
    
}

ul{
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 500;
    font-size: 0.94rem;
    list-style: none;
    display: flex;
    gap: 3rem;
    padding-top: 0.5rem;
}

section#page1{
    padding-top: 6rem;
    padding-bottom: 8rem;
    display: flex;
    justify-content: space-around;
    background-color: #F7C7B9;
    
}

img#page1{
    width: 36rem;
}

div#tittle1{
    padding-top: 2  rem;

}

section#page1 h1{   
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 600;
    font-size: 2.6rem;
    color: #161212;
    width: 21rem;
}

section#page1 li{
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 500;
    font-size: 0.9rem;
    color: #404040;
    list-style: none;
}

div#bloco1{
    display: flex;
    flex-direction: column;
    gap: 0.9rem;
}

button#img-button{
    background-color: #DA2535;
    display: flex;
    gap: 1rem;
    border: none;
    border-radius: 0.5rem;
    padding: 0.7rem 1.5rem;

    font-size: 0.9rem;
    color: #F9F9F9;
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 600;
    cursor: pointer;
    transition: .3s;
}

button#img-button:hover{
    background-color: #ae313c;
}

button#img-button p{
    padding-top: 0.1rem;
}

div#button{
    padding-top: 1.7rem;

}

div#tittle2{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

section#page2 h1{
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 600;
    font-size: 2.6rem;
    color: #161212;
    padding-top: 3rem;
}

section#page2 li{
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 500;
    font-size: 0.85rem;
    color: #404040;
    list-style: none;  
}

div#subtittle2{
    display: flex;
    flex-direction: column;
    align-items: center;
}

div#blocos{
    display: flex;
    justify-content: space-evenly;
    padding-top: 2rem;
    padding-bottom: 5.3rem;
    gap: 4rem;
}

div.bloco{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    text-align: center;
    width: 11.5rem;
}

div.bloco h3{
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 500;
    font-size: 1.4rem;
    color: #161212;
}

div.bloco p{
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 500;
    font-size: 0.9rem;
    color: #8D8D8D;

}

section#page3{
    background-color:  #F7C7B9;
    padding-top: 8rem;
    padding-bottom: 4rem;
}

div#page3{
    display: flex;
    justify-content: space-evenly;
    
}


section#page3 h1{
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 600;
    font-size: 2.9rem;
    color: #161212;
    width: 27rem;
}

section#page3 li{
    padding-bottom: 1rem;
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 500;
    font-size: 0.95rem;
    color: #404040;
    list-style: none;
    width: 27rem;   
}

div#page3{

    padding-right: 8rem;

}

button#img-button2{
    background-color: #DA2535;
    display: flex;
    gap: 1rem;
    border: none;
    border-radius: 0.6rem;
    padding: 0.7rem 1.5rem;

    font-size: 0.9rem;
    color: #F9F9F9;
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 600;
    cursor: pointer;
    transition: .3s;
}

button#img-button2:hover{
    background-color: #ae313c;
}

div#text-page3{
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

section#page4{
    padding: 2.5rem;
    display: flex;
    justify-content: space-around;
    gap: 40rem;
}

section#page4 p{
    font-family: "Poppins", sans-serif, Arial;
    font-weight: 600;
    font-size: 1.2rem;
    padding-top: 0.3rem;
}

div#img4{
    display: flex;
    gap: 4rem;
    padding-right: 1rem;
    margin-top: auto;
    margin-bottom: auto;
}

